--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <a>Settings</a>
                 </li>
                 <li>
-                    <a href="https://github.com/edlynvillegas/evo-calendar" target="_blank" title="get it on github">Github</a>
+                    <a href="sandbox.html" target="_blank" title="get it on github">Github</a>
                 </li>
             </ul>
         </div>
